After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723737 - glib / gsettings warning at console: "g_settings_get: the format string may not contain '&'"
glib / gsettings warning at console: "g_settings_get: the format string may n...
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
3.11.x
Other Linux
: Normal minor
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-06 03:59 UTC by Adam Williamson
Modified: 2014-02-18 11:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adam Williamson 2014-02-06 03:59:52 UTC
This is minor for now, but may be critical in future :) I noticed that running Evince 3.11.3 from console in a GNOME 3.11.5 environment, with glib2-2.39.3-1.fc21.x86_64 , I get this warning:

(evince:15581): GLib-GIO-CRITICAL **: g_settings_get: the format string may not contain '&' (key 'document-directory' from schema 'org.gnome.Evince'). This call will probably stop working with a future version of glib.