shell: Fix potential read-after-free in gsettings use

It's not valid to use '&' with g_settings_get().

https://bugzilla.gnome.org/show_bug.cgi?id=723737